<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/map_card_view"
    app:cardBackgroundColor="@color/inputLine"
    android:layout_margin="5dp"
    android:outlineSpotShadowColor="@color/colorPrimary"
    android:padding="5dp"
    android:elevation="50dp"
    android:layout_gravity="center">
    <com.amap.api.maps.TextureMapView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.cardview.widget.CardView>