<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.AccountActivity">
    <RelativeLayout
        android:id="@+id/account_head"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <ImageButton
            android:src="@drawable/back"
            android:scaleType="centerInside"
            android:background="@drawable/button_back_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon" />
        <Button
            android:id="@+id/btn_accountBack"
            android:textColor="@color/mdtp_white"
            android:text="登录"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="-10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <EditText
        android:id="@+id/et_username"
        android:textSize="16sp"
        android:hint="用户名"
        android:layout_below="@+id/rl_accountTitle"
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_height="@dimen/time" />
    <EditText
        android:id="@+id/et_password"
        android:textSize="16sp"
        android:hint="密码"
        android:inputType="textPassword"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/time" />
    <Button
        android:id="@+id/btn_login"
        android:text="登录"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/et_password"
        android:textSize="20sp"
        android:layout_width="@dimen/follower"
        android:layout_height="@dimen/input_height" />
    <Button
        android:id="@+id/btn_regist"
        android:text="注册"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="-60dp"
        android:layout_below="@+id/btn_login"
        android:textSize="20sp"
        android:layout_width="@dimen/follower"
        android:layout_height="@dimen/input_height" />
    <ImageButton
        android:id="@+id/btn_qq"
        android:scaleType="centerInside"
        android:background="@drawable/qq"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="340dp"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon" />
    <ImageButton
        android:id="@+id/btn_wechat"
        android:scaleType="centerInside"
        android:background="@drawable/wechat"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="340dp"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon" />
    <ImageButton
        android:id="@+id/btn_jaccount"
        android:scaleType="centerInside"
        android:background="@drawable/jaccount"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="340dp"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height" />

</RelativeLayout>