...
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintTextColor="@color/colorPrimaryDark"
                app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:autofillHints="@string/title"
                    android:gravity="start|bottom"
...
            android:gravity="center"
            android:paddingTop="20dp"
            app:hintTextColor="@color/colorPrimaryDark"
            app:hintTextAppearance="@style/FloatingLabelTextAppearance">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_weight="0"
                android:gravity="start|bottom"
...
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:gravity="start|fill_horizontal|top">

                <EditText
                    android:id="@+id/expire_date_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:hint="@string/select_time"
...
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/at"
                    android:textColor="@color/colorPrimaryTitle" />

                <EditText
                    android:id="@+id/expire_time_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:hint="@string/select_time"
...
                    android:paddingBottom="8dp"
                    android:text="@string/remind_me"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/remind_me_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp" />

...
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:gravity="top">

                    <EditText
                        android:id="@+id/remind_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="@string/select_time"
...
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/at"
                        android:textColor="@color/colorPrimaryTitle" />

                    <EditText
                        android:id="@+id/remind_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="@string/select_time"
                        android:inputType="time"
                        android:textIsSelectable="false"
                        tools:targetApi="o" />

                    <Spinner
                        android:id="@+id/repeat_type"
                        android:layout_width="@dimen/avatar"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:entries="@array/recycle_array"
                        android:textAlignment="center" />
                </LinearLayout>
...
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_task_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#e6e6e6"
        android:src="@drawable/checkmark_complete"
...
